subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/build/tmp/compileTestSwift/output.txt
See file:///Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can%20build%20xctest%20bundle%20which%20depends%20on%20swift%20module/build/tmp/compileTestSwift/output.txt for all output for compileTestSwift.
compiling swift file(s) failed.
Apple Swift version 4.0 (swiftlang-900.0.45.6 clang-900.0.26)
Target: x86_64-apple-macosx10.9
/Applications/Xcode-beta.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift -frontend -c -primary-file "/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/src/test/swift/GreeterTest.swift" -target x86_64-apple-macosx10.9 -enable-objc-interop -sdk /Applications/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.13.sdk -I "/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/build/obj/main/debug" -F /Applications/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/Library/Frameworks -g -emit-module-doc-path "/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/build/obj/test/44lkaswtkqmd1g0gby2hs9zqc/GreeterTest~partial.swiftdoc" -parse-as-library -module-name CanBuildXctestBundleWhichDependsOnSwiftModuleTest -emit-module-path "/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/build/obj/test/44lkaswtkqmd1g0gby2hs9zqc/GreeterTest~partial.swiftmodule" -o "/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/build/obj/test/44lkaswtkqmd1g0gby2hs9zqc/GreeterTest.o"
/Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can build xctest bundle which depends on swift module/src/test/swift/GreeterTest.swift:2:18: error: no such module 'Greeter'
@testable import Greeter
                 ^

Finished compileTestSwift, see full log file:///Users/pepper/dev/github.com/gradle/gradle/subprojects/testing-native/src/integTest/resources/org/gradle/nativeplatform/test/xctest/XCTestIntegrationTest/can%20build%20xctest%20bundle%20which%20depends%20on%20swift%20module/build/tmp/compileTestSwift/output.txt.
